<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0E5F6"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="-90dp"
        app:layout_constraintBottom_toBottomOf="@id/task_generate_container"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:id="@+id/timer_layout"
        android:elevation="2dp"
        android:background="@drawable/borders_for_timer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_40"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Chronometer
            android:id="@+id/count_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="15dp"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/borders_for_timer"
        android:padding="5dp"
        android:text="@string/score_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/task_generate_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp"
        android:weightSum="100"
        android:paddingVertical="4dp"
        android:elevation="15dp"
        android:background="@drawable/borders_for_count_layout"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/count_buttons_container">

        <ImageView
            android:id="@+id/not_right_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/not_right"
            android:src="@drawable/ic_baseline_close_24"
            android:visibility="gone" />

        <TextView
            android:id="@+id/task_text"
            android:layout_weight="58"
            android:paddingVertical="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginEnd="0dp"
            tools:text="Task"
            android:textAlignment="textEnd"
            android:paddingHorizontal="5dp"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/user_answer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingVertical="5dp"
            android:textAlignment="textStart"
            android:layout_weight="42"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/count_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/ok_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/CountButtonStyle"
            android:text="@string/_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/CountButtonStyle"
            android:text="@string/_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/CountButtonStyle"
            android:text="@string/_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/CountButtonStyle"
            android:text="@string/_4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button1"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/CountButtonStyle"
            android:text="@string/_5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/CountButtonStyle"
            android:text="@string/_6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button3"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/CountButtonStyle"
            android:text="@string/_7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button4"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/CountButtonStyle"
            android:text="@string/_8"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/CountButtonStyle"
            android:text="@string/_9"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button6"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ok_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:padding="15dp"
        android:weightSum="90"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/CountButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            style="@style/CountButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/CountButtonStyle"
            android:backgroundTint="#FF2600"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/small_text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/CountButtonStyle"
        android:layout_marginStart="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/minus"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ok_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_for_decimals"
        style="@style/CountButtonStyle"
        android:layout_marginStart="15dp"
        android:text="@string/dot"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ok_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        android:backgroundTint="@color/red"
        android:text="@string/finish"
        android:textStyle="bold"
        app:strokeColor="@color/material_on_surface_emphasis_medium"
        app:strokeWidth="2dp"
        android:visibility="gone"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok_container" />

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:elevation="-1dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            android:layout_marginTop=""-->
<!--            android:background="@drawable/blue_background_count_part"-->
<!--            app:layout_constraintTop_toBottomOf="@id/task_generate_container"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>