<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/spotlight_background"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_for_bottom_navigation"
        android:elevation="@dimen/normal_elevation_20"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicator="@color/transparent"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naturals" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimals" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/arrow_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        android:src="@drawable/ic_baseline_arrow_upward_24"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/arrow_up"
        android:textSize="@dimen/large_title_text_30"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="@dimen/margin_30"
        android:text="@string/swipe_horizontally_or_click_on_tabs_to_change_type_of_numbers"/>


</androidx.constraintlayout.widget.ConstraintLayout>