<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_for_app"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainActivity.mainFragments.profileSettings.ChangeSurnameFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_surname_back_button"
        android:src="@drawable/ic_baseline_arrow_back_50"
        android:backgroundTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_button"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mtg"
        android:textSize="80sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:id="@+id/change_surname_program_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_surname_author"
        android:text="@string/made_by_vay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/change_surname_program_name"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_surname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:startIconDrawable="@drawable/ic_baseline_group_24"
        app:layout_constraintTop_toBottomOf="@id/change_surname_author"
        android:layout_marginTop="70dp"
        android:hint="@string/surname">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/surname_for_change"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/white"
        android:id="@+id/change_surname_button"
        android:textSize="24sp"
        android:textColor="@color/blue_bright"
        android:text="@string/change_surname"
        app:layout_constraintTop_toBottomOf="@id/change_surname_edit_text"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>