<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_gravity="center"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="30dp"
        android:backgroundTint="@color/blue_bright"
        android:id="@+id/dialog_card">
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cardCornerRadius="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/dialog_image_card">
            <ImageView
                android:contentDescription="@string/dialog_image"
                android:layout_width="70dp"
                android:background="@color/white"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_person_50"
                android:id="@+id/dialog_image"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20sp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:id="@+id/cancel_dialog_button"
            android:textColor="@color/blue_bright"
            app:cornerRadius="20dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/white"
            android:layout_gravity="bottom|start"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/exit"
            app:cornerRadius="20dp"
            android:id="@+id/exit_dialog_button"
            android:textColor="@color/blue_bright"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:layout_gravity="bottom|end"/>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>